--- a/graphrag.ipynb
+++ b/graphrag.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,22 @@
     "    DETACH DELETE n\n",
     "    \"\"\"\n",
     "    graph.query(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean graph if required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_graph()"
    ]
   },
   {
@@ -108,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +138,7 @@
    ],
    "source": [
     "from langchain_core.documents import Document\n",
-    "with open('document.txt', 'r') as file:\n",
+    "with open('document2.txt', 'r') as file:\n",
     "    text = file.read()\n",
     "\n",
     "documents = [Document(page_content=text)]\n",
